# kind-interpreter

./: .gitignore  .project  README.md  find-id  kind-interpreter.cabal  runtests  testrepl
kindtests/ParseAndEvaluate/: explicit_types.k  function_inference.k  functions2.k  functions_and_operators.k  lvalue_operators.k  overloadedfunctions.k  return42.k  variables.k
runkind/: Main.hs
src/KindLang/: Internal.hs
src/KindLang/Analysis/: BuildCatalogue.hs  BuildTypeCatalogue.hs  ResolveTypes.hs
src/KindLang/Data/: AST.hs  AnnotatedAST.hs  BasicTypes.hs  Catalogue.hs  Error.hs  HasClassInstances.hs  KStat.hs  MStat.hs  Scope.hs  Types.hs  Value.hs
src/KindLang/Lib/: CoreTypes.hs  InternalFunctions.hs  Operators.hs
src/KindLang/Locale/: ErrorMessages.hs
src/KindLang/Parser/: BasicTokens.hs  Combinators.hs  ExpressionParser.hs  ModuleParser.hs  State.hs  StatementParser.hs
src/KindLang/Runtime/: Data.hs  Eval.hs  Metaclass.hs
src/KindLang/Util/: Control.hs  StandardInstances.hs
tests/: Main.hs
tests/AnalysisTests/: Catalogue.hs  TypeCatalogue.hs  TypeResolution.hs
tests/ExecutionTests/: ParseAndEvaluate.hs  SimpleEvaluation.hs
tests/ParserTests/: CombinatorTests.hs  Expression.hs  Function.hs  Module.hs  Statement.hs  Util.hs
tests/TypeTests/: Catalogue.hs  NSID.hs  ScopedID.hs
