name:           kind-interpreter
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         admin

executable kind-interpreter
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec-pratt >=0.1 && <0.2,
                   parsec >= 3.1 && <4,
                   containers >= 0.5.6.2 && < 0.6
                   
  ghc-options:     -Wall -fno-warn-unused-do-bind
  other-modules:   
                   KindLang.Parser.ModuleParser,
                   KindLang.Data.AST,
                   KindLang.Parser.Combinators,
                   KindLang.Util.Control

