name:           kind-interpreter
version:        0.1
cabal-version:  >=1.18
build-type:     Simple
author:         Julian Hall
stability:      experimental
synopsis:       An experimental implementation of the Kind language.
description:    The Kind language is an object-functional language aimed at
                enterprise and application development.  Although the language
                is intended to be compilable, this version only contains an
                interpreter. It is intended for rapid development of
                experimental features, particularly type-system experiments.
category:

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base >= 4,
                    parsec-pratt >= 0.1.1 && < 0.2,
                    parsec >= 3.1 && <4,
                    containers >= 0.5.6.2 && < 0.6,
                    mtl >= 2,
                    STMonadTrans >= 0.3

  ghc-options:      -Wall -fno-warn-unused-do-bind
  exposed-modules:  KindLang.Parser.ModuleParser
                    KindLang.Data.AST
                    KindLang.Data.BasicTypes
                    KindLang.Data.Catalogue
                    KindLang.Data.Error
                    KindLang.Data.Scope
                    KindLang.Data.Types
                    KindLang.Data.Value
                    KindLang.Internal
                    KindLang.Locale.ErrorMessages
                    KindLang.Parser.BasicTokens
                    KindLang.Parser.ExpressionParser
                    KindLang.Parser.State
                    KindLang.Parser.StatementParser
                    KindLang.Analysis.ResolveTypes
                    KindLang.Analysis.BuildCatalogue
                    KindLang.Lib.CoreTypes
                    KindLang.Lib.Operators
                    KindLang.Parser.Combinators
                    KindLang.Util.Control
                    KindLang.Runtime.Eval

executable runkind
  default-language:Haskell2010
  hs-source-dirs:  runkind                             
  main-is:         Main.hs
  build-depends:   base >= 4,
                   kind-interpreter
                                     
test-suite kind-tests
  default-language:Haskell2010
  hs-source-dirs:  tests
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  build-depends:   base >= 4,
                   tasty >= 0.10,
                   tasty-hunit >= 0.9,
                   parsec >= 3.1 && < 4,
                   kind-interpreter,
                   containers >= 0.5.6.2 && < 0.6,
                   mtl >= 2,
                   STMonadTrans >= 0.3
  other-modules:   ParserTests.Module
                   ParserTests.Util
                   ParserTests.CombinatorTests
                   ParserTests.Function
                   ParserTests.Expression
                   ParserTests.Statement
                   AnalysisTests.Catalogue
                   AnalysisTests.TypeResolution
                   TypeTests.NSID
                   TypeTests.Catalogue
                   ExecutionTests.SimpleEvaluation
                   ExecutionTests.ParseAndEvaluate
                   
                                                                        